Fixed alignment

--- a/src/app/components/upcoming-event-card-list/upcoming-event-card-list.component.scss
+++ b/src/app/components/upcoming-event-card-list/upcoming-event-card-list.component.scss
@@ -6,18 +6,19 @@
 
   .title {
     text-transform: capitalize;
-
-    &.center {
-      text-align: center;
-    }
   }
 
   .no-items {
     color: $gray;
-    text-align: center;
 
     &::first-letter {
       text-transform: capitalize;
+    }
+  }
+
+  .title, .no-items {
+    &.center {
+      text-align: center;
     }
   }
 }
